@@ -1,5 +1,5 @@
 # GNU Makefile for hexenworld clients using GCC.
-# $Header: /cvsroot/uhexen2/engine/hexenworld/client/Makefile,v 1.96 2010-11-21 10:23:24 sezero Exp $
+# $Id$
 #
 # Type "make help" to see the valid targets.
 #
