@@ -1,4 +1,4 @@
-# $Header: /cvsroot/uhexen2/scripts/cross_defs_w64,v 1.3 2009-12-26 12:01:22 sezero Exp $
+# $Id$
 
 # This file contains all common Win64 cross compilation definitions for
 # use with all other build_cross_win64.sh scripts for the uhexen2 tree.
